# pdf-extractext

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  main_example.py  pyproject.toml  requirements.txt
api/: __init__.py
api/routes/: __init__.py  pdf_routes.py
api/schemas/: __init__.py  pdf_schemas.py
api_web/: .dockerignore  Dockerfile  docker-compose.yml  main.py  requirements.txt
api_web/api/: __init__.py  routes.py
api_web/schemas/: __init__.py
api_web/services/: __init__.py  file_service.py
api_web/tests/: __init__.py  conftest.py
app/api/legacy/: main.py
app/api/legacy/routes/: routes.py
app/api/legacy/schemas/: file_schemas.py
app/api/legacy/tests/: conftest.py
app/config/: __init__.py  settings.py
app/infrastructure/: database_connection.py  database_setup.py  pdf_extractor.py
app/models/: pdf_document.py
app/repositories/: file_pdf_repository.py  mongo_pdf_repository.py  repository_factory.py
app/repositories/interfaces/: pdf_repository_interface.py
app/routes/: pdf_routes.py
app/services/: pdf_service.py
app/services/interfaces/: pdf_service_interface.py
core/: __init__.py  config.py  exceptions.py
infrastructure/: __init__.py  database_connection.py  database_schema.md  database_setup.py  pdf_extractor_adapter.py
models/: __init__.py  pdf_document.py
repositories/: __init__.py  file_pdf_repository.py  mongo_pdf_repository.py  pdf_repository.py  repository_factory.py
repositories/interfaces/: __init__.py  pdf_repository_interface.py
services/: __init__.py  pdf_service.py
services/interfaces/: __init__.py  pdf_service_interface.py
tests/: __init__.py  conftest.py  tests_description.txt
tests/fixtures/: generate_fixtures.py
tests/integration/: conftest.py  test_mongo_integration.py
tests/integration/test_creation_document/: test_create_document.py
tests/integration/test_delete/by id/: test_hard_delete.py
tests/integration/test_delete/soft_delete/: test_soft_delete.py
tests/integration/test_find_document/: test_find_all.py  test_find_by_id.py
tests/integration/test_find_document/checksum/: test_find_by_checksum.py
tests/integration/test_life_cicle/: test_document_lifecycle.py
tests/integration/test_restore/: test_restore_document.py
tests/integration/test_update/: test_update_document.py
tests/legacy/: test_download.py  test_upload.py
tests/unit/: conftest.py  factories.py  test_api_entry.py  test_database_connection.py  test_extractor.py  test_file_management.py  test_mongo_repository.py  test_pdf_document.py  test_pdf_service.py  test_repository_interface.py  test_routes_integration.py  test_service_entry.py  test_upload_flow.py
tests/unit/api/: __init__.py  test_pdf_routes.py
tests/unit/domain/: __init__.py  test_pdf_document.py  test_repository_interface.py
tests/unit/infrastructure/: __init__.py  test_database_connection.py  test_file_management.py  test_pdf_extractor.py
tests/unit/repositories/: __init__.py  test_mongo_repository.py
tests/unit/services/: __init__.py  test_pdf_service.py  test_validation.py
