[project]
name = "pdf-extractext"
version = "0.1.0"
description = "Extractor de texto de PDFs con arquitectura 3 capas"
readme = "README.md"
requires-python = ">=3.13"

authors=[{name="Zinik Facundo"},{name="Velez Marcos"},
{name= "Gonzalez Ignacio Matias"},{name="Monardi Dalma"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "pypdf>=5.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pymongo==4.6.0",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "models*", "services*", "repositories*", "infrastructure*"]
exclude = ["tests*", ".venv*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "reportlab>=4.4.10",
]
